# press-watch

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  package.json  pnpm-lock.yaml
.codex/skills/comment-style-ja/: SKILL.md
.codex/skills/commit-message-ja/: SKILL.md
.codex/skills/phase-branch-workflow-ja/: SKILL.md
.codex/skills/presswatch-glossary-ja/: SKILL.md
.codex/skills/presswatch-notes-ja/: SKILL.md
.codex/skills/presswatch-skill-maintenance-ja/: SKILL.md
.github/workflows/: api-tests.yml
apps/api/: .gitkeep  alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 31765401e166_create_press_releases.py
apps/api/src/press_watch_api/: __init__.py  config.py  db.py  main.py
apps/api/src/press_watch_api/commands/: __init__.py  import_env_press.py
apps/api/src/press_watch_api/models/: __init__.py  base.py  press_release.py
apps/api/src/press_watch_api/repositories/: __init__.py  press_release.py
apps/api/src/press_watch_api/schemas/: __init__.py  press_release.py
apps/api/src/press_watch_api/services/: __init__.py  press_release_import.py
apps/api/tests/: api_test_constants.py  test_config_db.py  test_manual_import_command.py  test_press_release_import.py  test_press_release_model.py  test_press_release_repository.py
apps/web/: .gitkeep  package.json
docs/: db-migrations.md  local-development.md  project-overview.md  requirements.md  scraping-env-go-jp.md  tasks.md  tech-stack.md
infra/: compose.yml
infra/docker/: .gitkeep  api.Dockerfile  web.Dockerfile
(+8 files in other folders)
