[project]
name = "press-watch-api"
version = "0.1.0"
description = "FastAPI application for PressWatch."
requires-python = ">=3.14"
dependencies = [
  "alembic>=1.13.0,<2.0.0",
  "fastapi[standard]>=0.115.0,<1.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
]

[tool.uv]
package = false
